@@ -7,12 +7,17 @@ package org.opensmartgridplatform.adapter.protocol.dlms.domain.commands.testutil
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
+import org.opensmartgridplatform.dlms.objectconfig.AccessType;
 import org.opensmartgridplatform.dlms.objectconfig.Attribute;
 import org.opensmartgridplatform.dlms.objectconfig.CosemObject;
+import org.opensmartgridplatform.dlms.objectconfig.DlmsDataType;
 import org.opensmartgridplatform.dlms.objectconfig.MeterType;
+import org.opensmartgridplatform.dlms.objectconfig.ObjectProperty;
 import org.opensmartgridplatform.dlms.objectconfig.ValueType;
 
 public class ObjectConfigServiceHelper {
+
   private static final int ATTRIBUTE_ID_SCALER_UNIT = 3;
 
   public static CosemObject createObject(
@@ -21,24 +26,47 @@ public class ObjectConfigServiceHelper {
       final String tag,
       final String scalerUnitValue,
       final boolean polyphase) {
-    final CosemObject object = new CosemObject();
-    object.setClassId(classId);
-    object.setObis(obis);
-    object.setTag(tag);
-    if (scalerUnitValue != null) {
-      object.setAttributes(createScalerUnitAttributeList(scalerUnitValue));
-    }
-    object.setMeterTypes(getMeterTypes(polyphase));
+    return createObject(classId, obis, tag, scalerUnitValue, polyphase, Map.of());
+  }
 
-    return object;
+  public static CosemObject createObject(
+      final int classId,
+      final String obis,
+      final String tag,
+      final String scalerUnitValue,
+      final boolean polyphase,
+      final Map<ObjectProperty, Object> properties) {
+    return createObject(
+        classId,
+        obis,
+        tag,
+        polyphase,
+        properties,
+        scalerUnitValue != null ? createScalerUnitAttributeList(scalerUnitValue) : List.of());
+  }
+
+  public static CosemObject createObject(
+      final int classId,
+      final String obis,
+      final String tag,
+      final boolean polyphase,
+      final Map<ObjectProperty, Object> properties,
+      final List<Attribute> attributes) {
+    return new CosemObject(
+        tag, "descr", classId, 0, obis, "", null, getMeterTypes(polyphase), properties, attributes);
   }
 
   private static List<Attribute> createScalerUnitAttributeList(final String value) {
-    final Attribute scalerUnitAttribute = new Attribute();
-    scalerUnitAttribute.setId(ATTRIBUTE_ID_SCALER_UNIT);
-    scalerUnitAttribute.setValue(value);
-    scalerUnitAttribute.setValuetype(ValueType.FIXED_IN_PROFILE);
-    return Collections.singletonList(scalerUnitAttribute);
+    return List.of(
+        new Attribute(
+            ATTRIBUTE_ID_SCALER_UNIT,
+            "descr",
+            null,
+            DlmsDataType.DONT_CARE,
+            ValueType.FIXED_IN_PROFILE,
+            value,
+            null,
+            AccessType.RW));
   }
 
   private static List<MeterType> getMeterTypes(final boolean polyphase) {
@@ -47,5 +75,17 @@ public class ObjectConfigServiceHelper {
     } else {
       return Arrays.asList(MeterType.PP, MeterType.SP);
     }
+  }
+
+  public static Attribute createAttribute(final int id, final String value) {
+    return new Attribute(
+        id,
+        "descr",
+        null,
+        DlmsDataType.DONT_CARE,
+        ValueType.FIXED_IN_PROFILE,
+        value,
+        null,
+        AccessType.RW);
   }
 }
